# OpenNoah

./: .gitignore  NOAH.md  pyproject.toml  test_mcp.py
copilot_proxy/: README.md  __init__.py  __main__.py  auth.py  config.py  server.py
noah_code/: __init__.py  __main__.py  cli.py  commands.py  config.py  context.py  cost_tracker.py  history.py  insights.py  query_engine.py  repl.py  state.py  tool.py  types.py  utils.py
noah_code/buddy/: __init__.py
noah_code/services/: claude_api.py  compact.py  mcp_client.py  memories.py  permissions.py  session_memory.py  skills.py  subagent.py  tips.py  tool_use_summary.py
noah_code/tools/: agent_tool.py  ask_user_tool.py  bash_tool.py  config_tool.py  file_edit_tool.py  file_read_tool.py  file_write_tool.py  glob_tool.py  grep_tool.py  list_dir_tool.py  mcp_tool.py  notebook_edit_tool.py  plan_mode_tools.py  powershell_tool.py  registry.py  repl_tool.py  sleep_tool.py  task_tools.py  todo_write_tool.py  tool_search_tool.py  web_fetch_tool.py  web_search_tool.py
